// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-7 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background-color: #ffffff;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-12,
.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-12 {
  border-right-color: #8c40ef;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-12 {
  border-right-color: #8c40ef;
}

.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-12,
.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-12 {
  border-right-color: #8c40ef;
}

.emotion-9[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-9[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-9[data-size='small'] {
  height: 2rem;
}

.emotion-9[data-size='medium'] {
  height: 2.5rem;
}

.emotion-9[data-size='large'] {
  height: 3rem;
}

.emotion-9[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-9[data-success='true']>.emotion-12 {
  border-right-color: #22674e;
}

.emotion-9[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-9[data-success='true']:active>.emotion-12 {
  border-right-color: #22674e;
}

.emotion-9[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-9[data-error='true']>.emotion-12 {
  border-right-color: #b3144d;
}

.emotion-9[data-error='true']>.emotion-12:hover {
  border-right-color: #b3144d;
}

.emotion-9[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-9[data-error='true']:active>.emotion-12 {
  border-right-color: #b3144d;
}

.emotion-9[data-error='true']:active>.emotion-12:hover {
  border-right-color: #b3144d;
}

.emotion-9[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9[data-disabled='true']>.emotion-12 {
  border-right-color: #e9eaeb;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
  font-size: 0.875rem;
}

.emotion-13[data-size="small"] {
  padding-left: 0.5rem;
}

.emotion-13[data-size="large"] {
  font-size: 1rem;
}

.emotion-13::-webkit-input-placeholder {
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13:disabled {
  cursor: not-allowed;
}

.emotion-13:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-15 {
  width: 12.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  width: 100%;
}

.emotion-18 #unit {
  border: none;
  background: transparent;
}

.emotion-18 #unit:focus,
.emotion-18 #unit:active {
  box-shadow: none;
}

.emotion-20 {
  display: inherit;
}

.emotion-20[data-container-full-height="true"] {
  height: 100%;
}

.emotion-20[data-container-full-width="true"] {
  width: 100%;
}

.emotion-24 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-24[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-24[data-size='medium'] {
  height: 2.5rem;
}

.emotion-24[data-size='large'] {
  height: 3rem;
}

.emotion-24[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-24[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-24[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-24[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-24[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-24[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-24[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-24[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-24[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-24[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-24[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-24:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-24[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-24[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-27 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-31 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-31 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-33:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-33:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-33 .e1y1n78x0 {
  stroke: transparent;
}

.emotion-33:hover,
.emotion-33:active {
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5 emotion-6"
            for="«r6»"
          >
            Test
          </label>
          <span
            class="emotion-7 emotion-6"
          >
            *
          </span>
        </div>
        <div
          class="emotion-9 emotion-10"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
          data-success="false"
        >
          <div
            class="emotion-11 emotion-12"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-13 emotion-14"
              data-size="large"
              data-testid="unit-input"
              id="«r6»"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
           
          <div
            class="emotion-15 emotion-16"
            width="12.6rem"
          >
            <div
              aria-label="test-unit"
              class="emotion-17 emotion-18 emotion-19"
            >
              <div
                aria-controls="«ra»"
                aria-describedby="«ra»"
                class="emotion-20 emotion-21"
                data-container-full-width="true"
                tabindex="-1"
              >
                <div
                  class="emotion-0 emotion-1"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="emotion-24 emotion-25"
                    data-disabled="false"
                    data-dropdownvisible="false"
                    data-readonly="false"
                    data-size="large"
                    data-state="neutral"
                    data-testid="select-input-test-unit"
                    id="unit"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="emotion-26 emotion-27 emotion-6"
                    >
                      Days
                    </div>
                    <div
                      class="emotion-29 emotion-30"
                    >
                      <svg
                        aria-label="show dropdown"
                        class="emotion-31 emotion-32"
                        viewBox="0 0 16 16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-33 emotion-34"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`UnitInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background-color: #ffffff;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-8,
.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-8 {
  border-right-color: #8c40ef;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-8 {
  border-right-color: #8c40ef;
}

.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-8,
.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-8 {
  border-right-color: #8c40ef;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-5[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-5[data-size='small'] {
  height: 2rem;
}

.emotion-5[data-size='medium'] {
  height: 2.5rem;
}

.emotion-5[data-size='large'] {
  height: 3rem;
}

.emotion-5[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-5[data-success='true']>.emotion-8 {
  border-right-color: #22674e;
}

.emotion-5[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-5[data-success='true']:active>.emotion-8 {
  border-right-color: #22674e;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-error='true']>.emotion-8 {
  border-right-color: #b3144d;
}

.emotion-5[data-error='true']>.emotion-8:hover {
  border-right-color: #b3144d;
}

.emotion-5[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[data-error='true']:active>.emotion-8 {
  border-right-color: #b3144d;
}

.emotion-5[data-error='true']:active>.emotion-8:hover {
  border-right-color: #b3144d;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  border-right-color: #e9eaeb;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
  font-size: 0.875rem;
}

.emotion-9[data-size="small"] {
  padding-left: 0.5rem;
}

.emotion-9[data-size="large"] {
  font-size: 1rem;
}

.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-9::placeholder {
  color: #727683;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-9:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-11 {
  width: 12.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  width: 100%;
}

.emotion-14 #unit {
  border: none;
  background: transparent;
}

.emotion-14 #unit:focus,
.emotion-14 #unit:active {
  box-shadow: none;
}

.emotion-16 {
  display: inherit;
}

.emotion-16[data-container-full-height="true"] {
  height: 100%;
}

.emotion-16[data-container-full-width="true"] {
  width: 100%;
}

.emotion-20 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-20[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-20[data-size='medium'] {
  height: 2.5rem;
}

.emotion-20[data-size='large'] {
  height: 3rem;
}

.emotion-20[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-20[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-20[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-20[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-20[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-20[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-20[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-20[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-20[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-20[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-20:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-20[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-20[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-23 {
  color: #727683;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-27 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-27 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for="«r0»"
        >
          Test
        </label>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
          data-success="false"
        >
          <div
            class="emotion-7 emotion-8"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-9 emotion-10"
              data-size="large"
              data-testid="unit-input"
              id="«r0»"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
           
          <div
            class="emotion-11 emotion-12"
            width="12.6rem"
          >
            <div
              aria-label="test-unit"
              class="emotion-13 emotion-14 emotion-15"
            >
              <div
                aria-controls="«r3»"
                aria-describedby="«r3»"
                class="emotion-16 emotion-17"
                data-container-full-width="true"
                tabindex="-1"
              >
                <div
                  class="emotion-0 emotion-1"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="emotion-20 emotion-21"
                    data-disabled="false"
                    data-dropdownvisible="false"
                    data-readonly="false"
                    data-size="large"
                    data-state="neutral"
                    data-testid="select-input-test-unit"
                    id="unit"
                    role="combobox"
                    tabindex="0"
                  >
                    <p
                      class="emotion-22 emotion-23 emotion-4"
                    >
                      Select item
                    </p>
                    <div
                      class="emotion-25 emotion-26"
                    >
                      <svg
                        aria-label="show dropdown"
                        class="emotion-27 emotion-28"
                        viewBox="0 0 16 16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
